# renderer/api/static/openapi_specification.yml
@@ -6,7 +6,7 @@ info:
 paths:
   /upload_pdf:
     post:
-      description: Upload a PDF file you want to convert to images             
+      description: Upload a PDF file you want to convert to images
       requestBody:
         required: true
         content:
@@ -19,7 +19,7 @@ paths:
           description: Document is valid and will be converted
           content:
             application/json:
-              schema: 
+              schema:
                 type: object
                 properties:
                   document_id:
@@ -27,7 +27,7 @@ paths:
                     example: 1
                   status:
                     $ref: '#/components/schemas/status'
-                  page_count: 
+                  page_count:
                     type: integer
                     example: 2
                   input_hash:
@@ -52,11 +52,11 @@ paths:
           required: true
           description: Numeric ID of the document to get
       responses:
-        '200': 
+        '200':
           description: Document was found in DB
           content:
             application/json:
-              schema: 
+              schema:
                 type: object
                 properties:
                   status:
@@ -100,14 +100,14 @@ paths:
         '400':
           description: Page number is wrong
   /ping:
-    get: 
+    get:
       description: Testing endpoint
-      responses: 
+      responses:
         '200':
           description: OK
           content:
             text/plain:
-              schema: 
+              schema:
                 type: string
                 format: string
               example: pong
